# ECE_406

./: .gitignore  ECE 406 _ Project Proposal.docx  ECE 406 _ To-Do List and Log.docx  README.md
Archive/Buttons/ryg_buttons/: CMakeLists.txt
Archive/Rust/Example_Method/: BUILD_INSTRUCTIONS.md
Archive/Rust/Example_Method/my-esp-idf-template-modified-a-lot/: sdkconfig.old
Archive/Rust/Manual_Method/my_c_and_rust_project/: CMakeLists.txt
Archive/Rust/Manual_Method/my_c_and_rust_project/main/: main.c
Archive/UART/uart_async_rxtxtasks/: sdkconfig
Archive/Zigbee/blink_and_zigbee/: sdkconfig.old
Archive/Zigbee/ryg_buttons_and_zigbee/: CMakeLists.txt
Code/travis_project_1/main/: main.c
ESP32-C6/: CMakeLists.txt  sdkconfig.old
ESP32-C6 Follower/: CMakeLists.txt
ESP32-C6 Follower/main/: esp_zb_light.c  idf_component.yml  light_driver.c  light_driver.h  zcl_utility.c
ESP32-C6 Leader/: CMakeLists.txt  README.md  sdkconfig
ESP32-C6 Leader/main/: CMakeLists.txt  main.c
ESP32-C6_Follower/: sdkconfig
ESP32-C6_Follower/main/: esp_zb_light.h  zcl_utility.h
ESP32-C6_Leader/: diagram.json  sdkconfig.old  wokwi.toml
ESP32-C6_Leader/main/: main.c
ESP32-C6_Leader_with_Rust/: CMakeLists.txt
ESP32-C6_Leader_with_Rust/main/: main.c
Example Projects/generic_gpio/: sdkconfig
GUI/: README.md
GUI/GUI/: README.md
GUI/GUI/sources/: main.py  styles.css  window.py
GUI/gui/: gui_executable.spec
GUI/my_gui/: styles.css  window.py
GUI/my_uart_1/: CMakeLists.txt
GUI/my_uart_1/main/: idf_component.yml  main.c
GUI/my_uart_2/: CMakeLists.txt
GUI/my_uart_2/main/: main.c
GUI/sources/: GUI_Executable.spec  python_requirements.txt  styles.css  window.py
GUI/uart_async_rxtxtasks/main/: uart_async_rxtxtasks_main.c
GUI/uart_async_rxtxtasks_unmodified/: CMakeLists.txt
General/main_program_with_everything/main/: main.c
General/ryg_buttons/main/: main.c
Images/: Block Diagram.aseprite  Block Diagram.drawio  Cover Image.aseprite
Rust/my_rust_folder/: cbindgen.toml  config.toml  my_rust_header.h
Rust/my_rust_package_folder/: Cargo.toml
Rust/my_rust_package_folder/src/: lib.rs
Zigbee/blink_and_zigbee/: CMakeLists.txt
Zigbee/blink_and_zigbee/main/: CMakeLists.txt
Zigbee/ryb_buttons_and_zigbee/: CMakeLists.txt
Zigbee/ryb_buttons_and_zigbee/main/: CMakeLists.txt  idf_component.yml
Zigbee/ryg_buttons_and_zigbee/main/: main.c
blink/: CMakeLists.txt
blink/main/: blink_example_main.c
blink_example/: sdkconfig
freertos_study/: sdkconfig
freertos_study/main/: main.c
gui/: main.py  serial_port_example_1.py  serial_port_example_2.py  styles.css  window.py
my_red_yellow_green_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
my_red_yellow_green_project/main/: main.c
red_yellow_green_buttons/: sdkconfig
red_yellow_green_buttons/main/: main.c
sample_project/: CMakeLists.txt
sample_project/main/: main.c
travis_project_1/: sdkconfig.old
travis_project_1/components/button/: esp32-button.c
travis_project_1/main/: main.c
(+27 files in other folders)
